gitops/observability/grafana/grafana-gateway/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: grafana.dev.saas.internal
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
            kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana-gateway
  hostnames:
    - grafana.dev.saas.internal
  rules:
    - backendRefs:
        - name: prometheus-stack-grafana
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-lb
  namespace: monitoring
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    gateway.networking.k8s.io/gateway-name: grafana-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
